Fix scroll spacing

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,9 +1,9 @@
 .buttonRow {
   position: relative;
-}
-
-@media only screen and (max-width: 600px) {
-  .buttonRow {
-    overflow-x: auto;
-  }
+  overflow: auto;
+  white-space: nowrap;
+  margin-left: -22px;
+  margin-right: -22px;
+  margin-bottom: -22px;
+  padding: 22px;
 }
