--- a/src/components/ToggleButton/ToggleButton.module.css
+++ b/src/components/ToggleButton/ToggleButton.module.css
@@ -16,6 +16,10 @@
   margin-right: 4px;
 }
 
+.toggleButton:last-of-type {
+  margin-right: 0px;
+}
+
 .toggleButton[aria-pressed='true'] {
   background: hsl(0deg, 0%, 5%);
   color: white;
